# dumpsta

./: Cargo.toml
src/: cli.rs  dialog.rs  main.rs
