[package]
name = "dumpsta"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.1", features = ["derive"] }
colored = "2.0"
crates-index = "0.18"
dirs = "4.0"
flate2 = "1.0"
indicatif = "0.16"
rayon = "1.5"
tar = "0.4"
ureq = "2.4"
